k8s/05-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1 # Number of dbs
  selector:
    matchLabels:
      app: db # Identify pods this deployment owns
  template:
    metadata:
      labels:
        app: db # Label for the pod
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine # Use the official PostgreSQL image
          ports:
            - containerPort: 5432 # Expose PostgreSQL port
          volumeMounts:
            - name: db-storage # Mount the volume
              mountPath: /var/lib/postgresql/data # Path in the container
      volumes:
        - name: db-storage # Name of the volume
          persistentVolumeClaim:
            claimName: db-pvc # Reference to the PVC
