k8s/db-service.yaml
apiVersion: v1 # Core API group, version v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP # Internal-only IP
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
